[package]
name = "reverberation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.114"
lazy_static = "1.4.0"
log = "0.4.8"
