[package]
name = "reverberation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
serde = { version = "1.0.133", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5.4"
rand = "0.8.4"
chrono = "0.4.19"
chrono-tz = "0.4"